--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
  <p1> JONATHAN STEVEN  CUCAITA ROJAS  </p1><br><br>
 <b> DEVELOPER </b><br><br>
  <p1> ROGERS GARCIA MORA  </p1><br><br><br><br><br><br>
+<b> DEVELOPER </b><br><br>
+ <p1> MARLON DAVID PACHECO  </p1><br><br><br><br><br><br>
 <p1> CALIFICADORA  </p1><br><br>
 <p1><b> INGENIERA: LAURA PULIDO DIAZ  </b></p1><br><br>
 </center>
