--- a/Proyecto Ciclo 3/Front/IMC.html
+++ b/Proyecto Ciclo 3/Front/IMC.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
         <title>IMC UNAB G9</title>
     </head>
@@ -16,23 +16,35 @@
             <form>
                 <table width="500px" height="300px" bgcolor="white">
                     <tr>
-                        <th width="100px" align="right" style="color: blue;" colspan="2">Nombre:</th> 
-                        <td><input type="text" style="width: 300px;" colspan="2"></td>
+                        <th width="100px" align="right" style="color: blue;">Nombre:</th> 
+                        <td><input type="text" style="width: 300px;" ></td>
                     </tr>
                     <tr>
-                        <th align="right" style="color: blue;" colspan="2">Apellido:</th> 
-                        <td><input type="text" style="width: 300px;" colspan="2"></td>
+                        <th align="right" style="color: blue;">Apellido:</th> 
+                        <td><input type="text" style="width: 300px;" ></td>
                     </tr>
                     <tr>
-                        <th align="right" style="color: blue;" colspan="2">Telefono:</th> 
-                        <td><input type="tel" style="width: 200px;" colspan="2"></td>
+                        <th align="right" style="color: blue;">Telefono:</th> 
+                        <td><input type="tel" style="width: 200px;"></td>
                     </tr>
                     <tr>
-                        <th align="right" style="color: blue;" colspan="2">Correo:</th> 
-                        <td><input type="email" style="width: 300px;" colspan="2"></td>
+                        <th align="right" style="color: blue;">Correo:</th> 
+                        <td><input type="email" style="width: 300px;"></td>
                     </tr>
                     <tr>
-                        <th align="right" style="color: blue;" colspan="2">Facultad:</th> 
+                        <th align="right" style="color: blue;" c>Facultad:</th> 
+                        <td>
+                            <select name="Facultad"style="width: 310px;" colspan="2">
+                                <option value="1">Facultad de Ciencias Económicas, Administrativas y Contables</option> 
+                                <option value="2">Facultad de Ciencias de la Salud</option> 
+                                <option value="3">Facultad de Ciencias Sociales, Humanidades y Artes</option>
+                                <option value="4">Facultad de Ciencias Jurídicas y Políticas</option> 
+                                <option value="5">Facultad de Ingeniería</option> 
+                             </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th align="right" style="color: blue;" c>Programa:</th> 
                         <td>
                             <select name="Facultad"style="width: 310px;" colspan="2">
                                 <option value="1">Facultad de Ciencias Económicas, Administrativas y Contables</option> 
@@ -46,9 +58,11 @@
                     <tr>
                         <th align="right" style="color: blue;">Peso(kg):</th> 
                         <td><input type="number" style="width: 100px;"></td>
+                    </tr>                    
+                    <tr>
                         <th align="right" style="color: blue;">Talla(cm):</th> 
                         <td><input type="number" style="width: 100px;"></td>
-                    </tr>                    
+                    </tr>
                 </table>
             </form>
         </center>
