--- a/Proyecto Ciclo 3/Front/IMC.html
+++ b/Proyecto Ciclo 3/Front/IMC.html
@@ -14,27 +14,32 @@
         <center>
             <p style="color: white;font-size: 25px;">Por favor ingrese los siguientes datos:</p>
             <form>
-                <table width="500px" height="300px" bgcolor="white">
+                <table width="450px" height="370px" bgcolor="white">
+                    <tr>
+                        <th width="100px" align="right" style="color: blue;">Fecha:</th> 
+                        <td><input type="date" id="fecha" name="fecha"></td>
+                    </tr>
                     <tr>
                         <th width="100px" align="right" style="color: blue;">Nombre:</th> 
-                        <td><input type="text" style="width: 300px;" ></td>
+                        <td><input type="text" style="width: 300px;" placeholder="Ingrese su nombre" id="nombre" name="nombre"></td>
                     </tr>
                     <tr>
                         <th align="right" style="color: blue;">Apellido:</th> 
-                        <td><input type="text" style="width: 300px;" ></td>
+                        <td><input type="text" style="width: 300px;" placeholder="Ingrese su apellido" id="apellido" name="apellido" ></td>
                     </tr>
                     <tr>
                         <th align="right" style="color: blue;">Telefono:</th> 
-                        <td><input type="tel" style="width: 200px;"></td>
+                        <td><input type="tel" style="width: 200px;" placeholder="Ingrese su telefono" id="tel" name="tel"></td>
                     </tr>
                     <tr>
                         <th align="right" style="color: blue;">Correo:</th> 
-                        <td><input type="email" style="width: 300px;"></td>
+                        <td><input type="email" style="width: 300px;" placeholder="usuario@example.com" id="correo" name="correo"></td>
                     </tr>
                     <tr>
                         <th align="right" style="color: blue;" c>Facultad:</th> 
                         <td>
-                            <select name="Facultad"style="width: 310px;" colspan="2">
+                            <select name="facultad"style="width: 310px;" id="facultad" required>
+                                <option value="">Eliga una opción</option>
                                 <option value="1">Facultad de Ciencias Económicas, Administrativas y Contables</option> 
                                 <option value="2">Facultad de Ciencias de la Salud</option> 
                                 <option value="3">Facultad de Ciencias Sociales, Humanidades y Artes</option>
@@ -46,24 +51,47 @@
                     <tr>
                         <th align="right" style="color: blue;" c>Programa:</th> 
                         <td>
-                            <select name="Facultad"style="width: 310px;" colspan="2">
-                                <option value="1">Facultad de Ciencias Económicas, Administrativas y Contables</option> 
-                                <option value="2">Facultad de Ciencias de la Salud</option> 
-                                <option value="3">Facultad de Ciencias Sociales, Humanidades y Artes</option>
-                                <option value="4">Facultad de Ciencias Jurídicas y Políticas</option> 
-                                <option value="5">Facultad de Ingeniería</option> 
+                            <select  name="programa"style="width: 310px;" id="programa" required>
+                                <option value="">Eliga una opción</option>
+                                <option value="1">Administración de Empresas - Profesional - Presencial</option> 
+                                <option value="2">Contaduría Pública - Profesional - Presencial</option> 
+                                <option value="3">Negocios Internacionales - Profesional - Presencial</option>
+                                <option value="4">Administración Turística y Hotelera - Profesional - Presencial</option> 
+                                <option value="5">Economía - Profesional - Presencial</option> 
+                                <option value="6">Enfermería - Profesional - Presencial </option>
+                                <option value="7">Psicología - Profesional - Presencial</option>
+                                <option value="8">Medicina - Profesional - Presencial</option>
+                                <option value="9">Psicología Convenio: Unisangil - Profesional - Presencial - Sede San Gil</option>
+                                <option value="10">Artes Audiovisuales - Profesional - Presencial</option>
+                                <option value="11">Gastronomía y Alta Cocina - Profesional - Presencial</option>
+                                <option value="12">Música - Profesional - Presencial</option>
+                                <option value="13">Comunicación Social - Profesional - Presencial</option>
+                                <option value="14">Licenciatura en Educación Infantil - Profesional - Presencial</option>
+                                <option value="15">Derecho - Convenio: Unisangil - Profesional - Presencial - Sede El Yopal</option>
+                                <option value="16">Derecho - Profesional - Presencial</option>
+                                <option value="17">Ingeniería Biomédica - Profesional - Presencial</option>
+                                <option value="18">Ingeniería de Sistemas - Profesional - Presencial</option>
+                                <option value="19">Ingeniería Financiera - Convenio: Unisangil - Profesional - Presencial - Sede San Gil</option>
+                                <option value="20">Ingeniería Industrial - Profesional - Presencial</option>
+                                <option value="21">Ingeniería de Mercados - Profesional - Presencial</option>
+                                <option value="22">Ingeniería en Energía - Profesional - Presencial</option>
+                                <option value="23">Ingeniería Financiera - Profesional - Presencial</option>
+                                <option value="24">Ingeniería Mecatrónica - Profesional - Presencial</option>
                              </select>
                         </td>
                     </tr>
                     <tr>
                         <th align="right" style="color: blue;">Peso(kg):</th> 
-                        <td><input type="number" style="width: 100px;"></td>
+                        <td><input type="number" style="width: 100px;" id="peso" name="peso" step="0.1" placeholder="0.0 kg" min="10.0" max="300"></td>
                     </tr>                    
                     <tr>
                         <th align="right" style="color: blue;">Talla(cm):</th> 
-                        <td><input type="number" style="width: 100px;"></td>
+                        <td><input type="number" style="width: 100px;" id="talla" name="talla" step="1"  placeholder="0 cm" min="50" max="280"></td>
                     </tr>
                 </table>
+                <br>
+                <input type="reset" name="limpiar" value="Limpiar" style="background-color: black; color: white; width: 90px; height: 35px;">
+                <input type="submit" name="enviar" value="Enviar" style="background-color: black; color: white;width: 90px; height: 35px;"> 
             </form>
         </center>
     </body>
