--- a/Proyecto Ciclo 3/Front/Sprint4/IMC.html
+++ b/Proyecto Ciclo 3/Front/Sprint4/IMC.html
@@ -23,7 +23,7 @@
         <div class="contenedor" style="background-color:black;border: 2px white solid;">
             <h4><a class="btn btn-link" href="IMC.html">Registro</a></h4>
             <h4><a class="btn btn-link">Resultados</a></h4>
-            <h4><a class="btn btn-link" href="graficos.html">Gracifos</a></h4>
+            <h4><a class="btn btn-link" href="graficos.html">Graficos</a></h4>
         </div>
         <div class="container-fluid">
             <div class="row">
